fix inventory detail image blur issue, adjust scrollbar style

--- a/inventory-portal/src/app/globals.css
+++ b/inventory-portal/src/app/globals.css
@@ -1,4 +1,16 @@
 @tailwind base;
+
+*::-webkit-scrollbar {
+  width: 15px;
+}
+
+*::-webkit-scrollbar-thumb {
+  border: 4px solid rgba(0, 0, 0, 0);
+  background-clip: padding-box;
+  border-radius: 9999px;
+  background-color: #AAAAAA;
+}
+
 @tailwind components;
 @tailwind utilities;
 
